--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,29 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@import "modern-normalize/modern-normalize.css";
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+:root {
+  --font-family: "Roboto", sans-serif;
+  --color-bg: #F5F5F6;
+  --color-white: #FFFFFF;
+  --color-text: #434455;
+  
+}
+
+
+body {
+  color: var(--color-text);
+  background: var(--color-bg);
+  font-family: Roboto, sans-serif;
+  font-size: 1rem;
+  /* -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; */
 }
 
 a {
@@ -35,8 +31,21 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+img,
+svg,
+video {
+  max-width: 100%;
+  display: block;
+  height: auto;
+}
+
+input,
+textarea,
+button,
+select {
+  font: inherit;
+  color: inherit;
+  background: none;
+  border: none;
+  outline: none;
 }
