--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,8 +22,13 @@ body {
   background: var(--color-bg);
   font-family: Roboto, sans-serif;
   font-size: 1rem;
+  height: 100%;
   /* -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; */
+}
+
+main {
+  min-height: 100%;
 }
 
 a {
