--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,62 +1,78 @@
-.header{
-    max-width: 1440px;
-    width: 100%;
-    padding: 40px 20px;
-    margin: 0 auto;
-    
+.header {
+  max-width: 1440px;
+  width: 100%;
+  /* padding: 1rem 1rem; */
+  margin: 0 auto;
 }
 
 .headerBox {
-    position: relative;
-    max-width: 1440px;
-    width: 100%;
-    height: 160px;
-    background-image: url(/img/header/head_bg.jpg);
-    background-repeat: no-repeat;
-    background-color: rgb(202, 194, 194) ;
-    background-size: cover;
-    background-position: center;
+  position: relative;
+  max-width: 1440px;
+  width: 100%;
+  height: 160px;
+  background-image: url(/img/header/head_bg.jpg);
+  background-repeat: no-repeat;
+  background-color: rgb(202, 194, 194);
+  background-size: cover;
+  background-position: center;
+  padding: 6.5rem 0.5rem 0.5rem;
 }
 
 .headerLogo {
-    background-color: transparent;
-    position: absolute;
-    top: 10px;
-    left: 20px;
+  background-color: transparent;
+  position: absolute;
+  top: 10px;
+  left: 20px;
+}
 
+.headerTextWrap {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.headerAddress {
+  text-align: right;
+  max-width: 160px;
+  width: 100%;
+  margin-left: auto;
+  margin-bottom: 0.5rem;
+  font-size: 0.75rem;
+  font-weight: 500;
+  font-style: oblique;
+}
+
+.headerTitle {
+  font-size: 1.5rem;
+  font-weight: 500;
+  /* font-style: italic; */
+  /* color: rgb(2, 2, 2); */
 }
 
 .nav {
-    width: 100%;
-    display: flex;
-    gap: 60px;
-    background-color: #0099DE;
-    
+  width: 100%;
+  display: flex;
+  gap: 0.5rem;
+  background-color: #0099de;
 }
 
 .link {
-    display: flex;
-    padding: 10px 15px;
-    text-decoration: none;
-    /* 
+  display: flex;
+  padding: 0.5rem;
+  text-decoration: none;
+  /* 
     background-color: transparent;
     border: 1px solid rgb(110, 110, 110);
     border-radius: 5px; */
-    font-weight: 600;
-    transition: all 0.3s;
-    font-size: 20px;
-    color: black;
-   
+  /* font-weight: 600; */
+  transition: all 0.3s;
 }
 
 .link:hover {
-    
-    color: gray;
-    transition: 0.25s;
-
+  color: gray;
+  transition: 0.25s;
 }
 
 .active {
-    color: white;
-    text-decoration: underline;
-    }
+  color: white;
+  text-decoration: underline;
+}
